# datax

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.yml  mkdocs.yml  package.json  pnpm-lock.yaml  pyproject.toml
apps/backend/: alembic.ini  pyproject.toml
apps/backend/alembic/: env.py
apps/backend/alembic/versions/: 9c2e5f45f8aa_add_status_and_last_tested_at_to_.py  a3612abd2e2c_make_bookmark_message_id_nullable.py  afded8db5834_initial_schema.py  ba968e5cdfbf_datax_v2_fresh_schema.py
apps/backend/src/app/: agui.py  config.py  database.py  dependencies.py  errors.py  logging.py  main.py  shutdown.py
apps/backend/src/app/api/: health.py
apps/backend/src/app/models/: __init__.py  connection.py  orm.py
apps/backend/src/app/services/: agent_service.py  agent_tools.py  bookmark_service.py  chart_config.py  conversation_context.py  dashboard_service.py  duckdb_manager.py  file_upload.py  query_service.py  (+3 more)
apps/backend/tests/: test_agent_service.py  test_agent_tools.py  test_agui.py  test_app.py  test_bookmarks.py  test_chart_config.py  test_config.py  test_connections.py  test_conversation_context.py  test_conversations.py  test_dashboards.py  test_data_profiling.py  test_dataset_preview.py  test_dataset_profile_endpoint.py  test_duckdb_manager.py  test_encryption.py  test_httpfs.py  test_messages.py  test_models.py  test_nl_query_service.py  test_paginate.py  test_providers.py  test_queries.py  test_rehydration.py  test_schema_context.py  test_schema_registry.py  test_upload.py
tools/dx/: pyproject.toml
tools/dx/src/dx/: cli.py
(+270 files in other folders)
