[project]
name = "dx"
version = "0.1.0"
description = "DataX dev server CLI"
requires-python = ">=3.12"
dependencies = [
    "typer>=0.15,<1",
    "httpx>=0.28,<1",
]

[project.scripts]
dx = "dx.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dx"]
